force-app/main/default/objects/Lead/fields/alycecom__Most_Recent_Gift_Invitation_Gift_Name__c.field-meta.xml
<CustomField>
    <fullName>alycecom__Most_Recent_Gift_Invitation_Gift_Name__c</fullName>
    <description>Alyce Most Recent Gift Invitation Gift Name</description>
    <inlineHelpText>Alyce Most Recent Gift Invitation Gift Name</inlineHelpText>
    <label>Most Recent Gift Invitation Gift Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>