force-app/main/default/objects/Lead/fields/alycecom__Most_Recent_Gift_Invitation_Status__c.field-meta.xml
<CustomField>
    <fullName>alycecom__Most_Recent_Gift_Invitation_Status__c</fullName>
    <description>Alyce Most Recent Gift Invitation Status</description>
    <inlineHelpText>Alyce Most Recent Gift Invitation Status</inlineHelpText>
    <label>Most Recent Gift Invitation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>