force-app/main/default/objects/Lead/fields/AVA__AVAAI_action_required__c.field-meta.xml
<CustomField>
    <fullName>AVA__AVAAI_action_required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This lead requires some action be taken by a rep</description>
    <inlineHelpText>This lead requires some action be taken by a rep</inlineHelpText>
    <label>Conversica Action Required</label>
    <type>Checkbox</type>
</CustomField>