force-app/main/default/objects/Lead/fields/AVA__AVAAI_action_required_date__c.field-meta.xml
<CustomField>
    <fullName>AVA__AVAAI_action_required_date__c</fullName>
    <description>The date and time it was determined action is required</description>
    <inlineHelpText>The date and time it was determined action is required</inlineHelpText>
    <label>Conversica Action Required Date</label>
    <type>DateTime</type>
</CustomField>