force-app/main/default/objects/Lead/fields/AVA__AVAAI_conversation_stage_date__c.field-meta.xml
<CustomField>
    <fullName>AVA__AVAAI_conversation_stage_date__c</fullName>
    <description>The date and time the current Conversation Stage changed</description>
    <inlineHelpText>The date and time the current Conversation Stage changed</inlineHelpText>
    <label>Conversation Stage Date</label>
    <type>DateTime</type>
</CustomField>