force-app/main/default/objects/Lead/fields/AVA__AVAAI_conversica_lead_status_date__c.field-meta.xml
<CustomField>
    <fullName>AVA__AVAAI_conversica_lead_status_date__c</fullName>
    <description>The date and time the current Conversation status was set</description>
    <inlineHelpText>The date and time the current Conversation status was set</inlineHelpText>
    <label>Conversica Lead Status Date</label>
    <type>DateTime</type>
</CustomField>