force-app/main/default/objects/Lead/fields/AVA__AVAAI_date_added__c.field-meta.xml
<CustomField>
    <fullName>AVA__AVAAI_date_added__c</fullName>
    <description>The date and time Conversica received the lead</description>
    <inlineHelpText>The date and time Conversica received the lead</inlineHelpText>
    <label>Conversica Date Added</label>
    <type>DateTime</type>
</CustomField>