force-app/main/default/objects/Lead/fields/AVA__AVAAI_further_action__c.field-meta.xml
<CustomField>
    <fullName>AVA__AVAAI_further_action__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the Lead is determined by your Conversica Assistant to have further questions or that they are waiting on actions from their assigned contact.</description>
    <inlineHelpText>Checked if the Lead is determined by your Conversica Assistant to have further questions or that they are waiting on actions from their assigned contact.</inlineHelpText>
    <label>Conversica Further Action</label>
    <type>Checkbox</type>
</CustomField>