force-app/main/default/objects/Lead/fields/AVA__AVAAI_lead_at_risk__c.field-meta.xml
<CustomField>
    <fullName>AVA__AVAAI_lead_at_risk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The lead may lose interest if not contacted soon by a rep</description>
    <inlineHelpText>The lead may lose interest if not contacted soon by a rep</inlineHelpText>
    <label>Conversica Lead At Risk</label>
    <type>Checkbox</type>
</CustomField>