force-app/main/default/objects/Lead/fields/CWS_Agnostic_Channel_Rep__c.field-meta.xml
<CustomField>
    <fullName>CWS_Agnostic_Channel_Rep__c</fullName>
    <description>This field is used to send an email to email address of non Salesforce user</description>
    <inlineHelpText>Enter the email for the person you want to receive an email notification that this Lead was converted into an Opportunity</inlineHelpText>
    <label>Agnostic Channel Rep</label>
    <type>Email</type>
</CustomField>