force-app/main/default/objects/Lead/fields/CWS_Business_Development_Rep__c.field-meta.xml
<CustomField>
    <fullName>CWS_Business_Development_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Development Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CWS_Business_Dev_Lead_Reps</relationshipName>
    <type>Lookup</type>
</CustomField>