force-app/main/default/objects/Lead/fields/CWS_Business_needs_pain_points__c.field-meta.xml
<CustomField>
    <fullName>CWS_Business_needs_pain_points__c</fullName>
    <description>Use to capture the Business requirements</description>
    <inlineHelpText>Indicates customer requirements and pain points during discovery process.</inlineHelpText>
    <label>Business needs/pain points</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>