force-app/main/default/objects/Lead/fields/CWS_Channel_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>CWS_Channel_Rep_Email__c</fullName>
    <inlineHelpText>Captures Distributor/Reseller email address.</inlineHelpText>
    <label>Channel Rep Email</label>
    <type>Email</type>
</CustomField>