force-app/main/default/objects/Lead/fields/CWS_Channel_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>CWS_Channel_Rep_Name__c</fullName>
    <inlineHelpText>Captures Distributor/Reseller name.</inlineHelpText>
    <label>Channel Rep Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>