force-app/main/default/objects/Lead/fields/CWS_Competitor_Takeaway_Automate_Command__c.field-meta.xml
<CustomField>
    <fullName>CWS_Competitor_Takeaway_Automate_Command__c</fullName>
    <description>Use to capture Competitor information related to Competitor Takeaway: Automate / Command</description>
    <inlineHelpText>Captures Automate / Command competitor from which CW is taking business for this deal.</inlineHelpText>
    <label>Competitor Takeaway: Automate / Command</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atera</fullName>
            </value>
            <value>
                <fullName>Break/Fix</fullName>
            </value>
            <value>
                <fullName>Cloud Management Suite</fullName>
            </value>
            <value>
                <fullName>Comodo One</fullName>
            </value>
            <value>
                <fullName>Datto RMM</fullName>
            </value>
            <value>
                <fullName>Domotz</fullName>
            </value>
            <value>
                <fullName>Intune</fullName>
            </value>
            <value>
                <fullName>Kace</fullName>
            </value>
            <value>
                <fullName>Kaseya</fullName>
            </value>
            <value>
                <fullName>Managed Workplace RMM</fullName>
            </value>
            <value>
                <fullName>ManageEngine</fullName>
            </value>
            <value>
                <fullName>Nagios</fullName>
            </value>
            <value>
                <fullName>Naverisk</fullName>
            </value>
            <value>
                <fullName>Ninja</fullName>
            </value>
            <value>
                <fullName>Panorama9</fullName>
            </value>
            <value>
                <fullName>Pulseway</fullName>
            </value>
            <value>
                <fullName>SCCM</fullName>
            </value>
            <value>
                <fullName>SolarWinds N-Central (N-Able)</fullName>
            </value>
            <value>
                <fullName>SolarWinds RMM (GFI)</fullName>
            </value>
            <value>
                <fullName>Syncro</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>