force-app/main/default/objects/Lead/fields/CWS_Competitor_Takeaway_BDR__c.field-meta.xml
<CustomField>
    <fullName>CWS_Competitor_Takeaway_BDR__c</fullName>
    <description>Use to capture the Competitor information related to Competitor Takeaway BDR</description>
    <inlineHelpText>Captures BDR competitor from which CW is taking business for this deal.</inlineHelpText>
    <label>Competitor Takeaway: BDR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Competitor_Takeaway_BDR</valueSetName>
    </valueSet>
</CustomField>