force-app/main/default/objects/Lead/fields/CWS_Competitor_Takeaway_Help_Desk__c.field-meta.xml
<CustomField>
    <fullName>CWS_Competitor_Takeaway_Help_Desk__c</fullName>
    <description>Use to capture Competitor Information related to Competitor Takeaway Helpdesk</description>
    <inlineHelpText>Captures Help Desk competitor from which CW is taking business for this deal.</inlineHelpText>
    <label>Competitor Takeaway: Help Desk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Competitor_Takeaway_Help_Desk</valueSetName>
    </valueSet>
</CustomField>