force-app/main/default/objects/Lead/fields/CWS_Competitor_Takeaway_Manage__c.field-meta.xml
<CustomField>
    <fullName>CWS_Competitor_Takeaway_Manage__c</fullName>
    <description>Use to capture the Competitor information related to Competitor Takeaway: Manage</description>
    <inlineHelpText>Captures Manage competitor from which CW is taking business for this deal.</inlineHelpText>
    <label>Competitor Takeaway: Manage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Competitor_Takeaway_Manage</valueSetName>
    </valueSet>
</CustomField>