force-app/main/default/objects/Lead/fields/CWS_Competitor_Takeaway_RMM__c.field-meta.xml
<CustomField>
    <fullName>CWS_Competitor_Takeaway_RMM__c</fullName>
    <description>Use to capture the Competitor Information related to Takeaway:RMM</description>
    <inlineHelpText>Captures RMM competitor from which CW is taking business for this deal.</inlineHelpText>
    <label>Competitor Takeaway: RMM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Competitor_Takeaway_RMM</valueSetName>
    </valueSet>
</CustomField>