force-app/main/default/objects/Lead/fields/CWS_Competitor_Takeaway_Sell__c.field-meta.xml
<CustomField>
    <fullName>CWS_Competitor_Takeaway_Sell__c</fullName>
    <description>Use to capture the Competitor Information related to Competitor Takeaway: Sell</description>
    <inlineHelpText>Captures Sell competitor from which CW is taking business for this deal.</inlineHelpText>
    <label>Competitor Takeaway: Sell</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Competitor_Takeaway_Sell</valueSetName>
    </valueSet>
</CustomField>