force-app/main/default/objects/Lead/fields/CWS_Control_Trial_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>CWS_Control_Trial_Account_ID__c</fullName>
    <description>Contains the latest Control Trial Account ID</description>
    <label>Control Trial Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>