force-app/main/default/objects/Lead/fields/CWS_Control_Trial_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CWS_Control_Trial_Start_Date__c</fullName>
    <label>Control Trial Start Date</label>
    <type>Date</type>
</CustomField>