force-app/main/default/objects/Lead/fields/CWS_Control_Trial_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Control_Trial_Type__c</fullName>
    <label>Control Trial Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>