force-app/main/default/objects/Lead/fields/CWS_Current_tools_used__c.field-meta.xml
<CustomField>
    <fullName>CWS_Current_tools_used__c</fullName>
    <description>Use to capture the details of the Current Tools used</description>
    <inlineHelpText>Captures which technology tools the Lead is currently using during sales Discovery.</inlineHelpText>
    <label>Current tools used</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>