force-app/main/default/objects/Lead/fields/CWS_Distributor__c.field-meta.xml
<CustomField>
    <fullName>CWS_Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup for the Distributor/Reseller Account</description>
    <inlineHelpText>Indicates the Distributor or Reseller for this Lead.</inlineHelpText>
    <label>Distributor/Reseller Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.CWS_Is_Distributor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Account.CWS_Is_IIT_Reseller__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Account)</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>