force-app/main/default/objects/Lead/fields/CWS_Disty_Country__c.field-meta.xml
<CustomField>
    <fullName>CWS_Disty_Country__c</fullName>
    <inlineHelpText>Indicates the Distributor&apos;s country.</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>