force-app/main/default/objects/Lead/fields/CWS_Disty_State_Province__c.field-meta.xml
<CustomField>
    <fullName>CWS_Disty_State_Province__c</fullName>
    <inlineHelpText>Indicates the Distributor&apos;s state or province.</inlineHelpText>
    <label>State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>