force-app/main/default/objects/Lead/fields/CWS_Do_Not_Sync_to_Marketo__c.field-meta.xml
<CustomField>
    <fullName>CWS_Do_Not_Sync_to_Marketo__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that this record will not sync back or be re-created in Marketo.</inlineHelpText>
    <label>Do Not Sync to Marketo</label>
    <type>Checkbox</type>
</CustomField>