force-app/main/default/objects/Lead/fields/CWS_Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>CWS_Email_Domain__c</fullName>
    <inlineHelpText>Captures the contact&apos;s email domain (i.e. gmail.com).</inlineHelpText>
    <label>Email Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>