force-app/main/default/objects/Lead/fields/CWS_Estimated_Values__c.field-meta.xml
<CustomField>
    <fullName>CWS_Estimated_Values__c</fullName>
    <inlineHelpText>Captures initial estimate of prospective opportunity amount.</inlineHelpText>
    <label>Estimated Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CWS_Estimated_Values</valueSetName>
    </valueSet>
</CustomField>