force-app/main/default/objects/Lead/fields/CWS_Experienced_a_Demo_Trial_Solution__c.field-meta.xml
<CustomField>
    <fullName>CWS_Experienced_a_Demo_Trial_Solution__c</fullName>
    <inlineHelpText>Captures whether the Lead has ever seen a Demo or done a trial before? / How familiar are they with our solutions?</inlineHelpText>
    <label>Experienced a Demo/Trial/Solution?</label>
    <type>TextArea</type>
</CustomField>