force-app/main/default/objects/Lead/fields/CWS_Fast_Track__c.field-meta.xml
<CustomField>
    <fullName>CWS_Fast_Track__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fast Track?</label>
    <type>Checkbox</type>
</CustomField>