force-app/main/default/objects/Lead/fields/CWS_Fulfillment_Type__c.field-meta.xml
<CustomField>
    <fullName>CWS_Fulfillment_Type__c</fullName>
    <description>Use to capture the Fulfillment type</description>
    <inlineHelpText>On channel partner deals, indicates whether this is a deal registration or fulfillment Lead.</inlineHelpText>
    <label>Fulfillment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fulfillment</fullName>
            </value>
            <value>
                <fullName>Deal Reg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>