force-app/main/default/objects/Lead/fields/CWS_GCLID__c.field-meta.xml
<CustomField>
    <fullName>CWS_GCLID__c</fullName>
    <label>GCLID</label>
    <type>TextArea</type>
</CustomField>