force-app/main/default/objects/Lead/fields/CWS_Implementation_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>CWS_Implementation_Timeframe__c</fullName>
    <inlineHelpText>Indicates whether the Lead has a timeframe in mind of when they would like to have a new solution in place if they are making a change.</inlineHelpText>
    <label>Implementation Timeframe?</label>
    <type>TextArea</type>
</CustomField>