force-app/main/default/objects/Lead/fields/CWS_Is_Distributor__c.field-meta.xml
<CustomField>
    <fullName>CWS_Is_Distributor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use to capture whether Account is Distributor</description>
    <inlineHelpText>Indicates whether the Lead is a Distributor.</inlineHelpText>
    <label>Is Distributor?</label>
    <type>Checkbox</type>
</CustomField>