force-app/main/default/objects/Lead/fields/CWS_Is_IIT_Reseller__c.field-meta.xml
<CustomField>
    <fullName>CWS_Is_IIT_Reseller__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use to capture whether the Account is Reseller or not</description>
    <inlineHelpText>Indicates whether the Lead is a Reseller.</inlineHelpText>
    <label>Is IIT Reseller?</label>
    <type>Checkbox</type>
</CustomField>