force-app/main/default/objects/Lead/fields/CWS_Lead_Converted_Status__c.field-meta.xml
<CustomField>
    <fullName>CWS_Lead_Converted_Status__c</fullName>
    <description>Captures status when associated Lead moves to a new Status.</description>
    <label>Lead Converted Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>MAL</fullName>
            </value>
            <value>
                <fullName>MQL</fullName>
            </value>
            <value>
                <fullName>SAL</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
            <value>
                <fullName>SQL Working</fullName>
            </value>
            <value>
                <fullName>SQO Accepted</fullName>
            </value>
            <value>
                <fullName>Recycled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>