force-app/main/default/objects/Lead/fields/CWS_Lead_Source_Details__c.field-meta.xml
<CustomField>
    <fullName>CWS_Lead_Source_Details__c</fullName>
    <description>Use to Capture the Source Details of the Lead</description>
    <inlineHelpText>Captures additional information on the Lead&apos;s source.</inlineHelpText>
    <label>Lead Source Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>